# rabbitmq-playground

./: .gitmodules  README.md
advanced/routing/: README.md  pyproject.toml
advanced/routing/src/rabbitmq_routing/: consumer.py  producer.py
advanced/rpc/: .gitignore  README.md  pyproject.toml
advanced/rpc/src/rabbitmq_rpc/: consumer.py  producer.py
advanced/topics/: README.md  pyproject.toml
advanced/topics/src/rabbitmq_topics/: consumer.py  producer.py
basic/hello-world/: pyproject.toml
basic/hello-world/src/: consumer.py  producer.py
basic/hello-world/src/rabbitmq_hello_world/: consumer.py  producer.py
basic/pub-sub/: README.md  pyproject.toml
basic/pub-sub/src/rabbitmq_pub_sub/: consumer.py  producer.py
basic/work-queues/: README.md  pyproject.toml
basic/work-queues/src/rabbitmq_work_queues/: consumer.py  producer.py
deployment/docker/: docker-compose.yml
deployment/docker/rabbitmq/: rabbitmq.conf
deployment/docker/standalone/: docker-compose.yml
deployment/docker/standalone/rabbitmq/: Dockerfile  definitions.json
