[project]
name = "rabbitmq-routing"
version = "0.1.0"
description = ""
authors = [
    {name = "rhasanm",email = "hasanrakibul.masum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "pika (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "rabbitmq_routing", from = "src"}]

[tool.poetry.scripts]
producer = "rabbitmq_routing.producer:main"
consumer = "rabbitmq_routing.consumer:main"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
