[project]
name = "rabbitmq-topics"
version = "0.1.0"
description = ""
authors = [
    {name = "rhasanm",email = "hasanrakibul.masum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "rabbitmq_topics", from = "src"}]

[tool.poetry.scripts]
producer = "rabbitmq_topics.producer:main"
consumer = "rabbitmq_topics.consumer:main"

[tool.poetry.group.dev.dependencies]
pika = "^1.3.2"
argparse = "^1.4.0"
isort = "^6.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
