[project]
name = "rabbitmq-hello-world"
version = "0.1.0"
description = ""
authors = [
    {name = "mr.hasan",email = "mr.hasan@banglalink.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "rabbitmq_hello_world", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
