[project]
name = "rabbitmq-hello-world"
version = "0.1.0"
description = ""
authors = [
    {name = "pesnik",email = "hasanrakibul.masum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "rabbitmq_hello_world", from = "src"}]

[tool.poetry.scripts]
producer = "rabbitmq_hello_world.producer:main"
consumer = "rabbitmq_hello_world.consumer:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
